--- a/packages/design-system/src/components/dyn-input/dyn-input.mdx
+++ b/packages/design-system/src/components/dyn-input/dyn-input.mdx
@@ -15,11 +15,11 @@ It provides a flexible interface for handling different forms of user input.
 ### Text Input
 
 Use the `DynInput` for basic text input:
-{/* 
+
 <Canvas>
   <Story name="Text">
     <DynInput data="Hello World" inputType="text" />
   </Story>
-</Canvas> */}
+</Canvas>
 <Story of={Stories.Text} />
 <Controls />
