docs: intro and philosophy

--- a/packages/design-system/src/pages/Introduction.mdx
+++ b/packages/design-system/src/pages/Introduction.mdx
@@ -2,9 +2,16 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs';
 
 <Meta title="Installation" />
 
-## Introduction
+# Introduction
 
 `@siteed/design-system` is a comprehensive cross-platform design system built around Expo for cross-platform applications. It extends react-native-paper to provide a robust set of UI components that are easy to implement and customize. Designed with an opinionated selection of libraries, it simplifies the integration process and reduces setup time, allowing developers to focus on building high-quality mobile apps efficiently.
+
+## Philosophy
+
+
+The design system is currently under active development and **is not production-ready** at the moment. Components and features are being added as needed, typically when they are required for specific projects. Most components are wrappers around `react-native-paper` to provide a base for customization while maintaining backward compatibility. This allows for quick iteration and integration of new features without breaking existing implementations.
+
+While the design system provides good defaults to get started quickly, users have the flexibility to choose the versions of all peer dependencies instead of hardcoding them as dependencies. This ensures compatibility and allows for greater control over the project's dependency management.
 
 ## Key Features
 
