--- a/packages/design-system/src/pages/Introduction.mdx
+++ b/packages/design-system/src/pages/Introduction.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs';
 
-<Meta title="Installation" />
+<Meta title="Introduction" />
 
 # Introduction
 
@@ -18,106 +18,3 @@ While the design system provides good defaults to get started quickly, users hav
 - **Opinionated Library Choices**: Includes essential libraries such as `react-native-paper`, `react-native-safe-area-context`, `react-native-reanimated`, ensuring compatibility and functionality.
 - **Ready-to-Use Components**: From typography to modals, get access to a variety of UI components that are production-ready and customizable.
 - **Streamlined Configuration**: Pre-configured settings and integrations to speed up the development process, making it ideal for rapid prototyping and production projects.
-
-
-## Installation
-```bash
-npx expo install @siteed/design-system @siteed/react-native-logger react-native-paper react-native-safe-area-context @gorhom/bottom-sheet@5.0.0-alpha.11 react-native-gesture-handler @expo/vector-icons expo-localization react-native-reanimated react-native-screens react-native-vector-icons @react-navigation/native
-```
-
-### with web support
-```bash
-npx expo install react-dom react-native-web @expo/metro-runtime react-native-web
-npx expo customize metro.config.js
-```
-
-## Usage
-
-Quickly integrate the design system into your app by importing and using the provided components and utilities:
-
-```tsx
-import 'intl-pluralrules';
-// Keep polyfills on top
-import { LabelSwitch, ScreenWrapper, UIProvider, useThemePreferences, Picker, SelectOption } from "@siteed/design-system";
-
-import { StatusBar } from 'expo-status-bar';
-import { StyleSheet, View } from 'react-native';
-import { Text } from 'react-native-paper';
-import React from 'react';
-
-export function App() {
-  const { toggleDarkMode, darkMode } = useThemePreferences()
-  const [options, setOptions] = React.useState<SelectOption[]>([{ label: 'Option 1', value: 'option1', selected: true }, { label: 'Option 2', value: 'option2' }])
-  return (
-    <ScreenWrapper withScrollView contentContainerStyle={styles.container}>
-      <Text>Open up App.tsx to start working on your app!</Text>
-      <View style={{width: '100%'}}>
-        <LabelSwitch label="Dark Mode" value={darkMode} onValueChange={toggleDarkMode} />
-        <Picker label="Category" options={options} onFinish={setOptions} />
-      </View>
-      <StatusBar style="auto" />
-    </ScreenWrapper>
-  );
-}
-
-export default function WrapApp() {
-  return (
-      <UIProvider>
-        <App />
-      </UIProvider>
-  )
-}
-
-const styles = StyleSheet.create({
-  container: {
-    flex: 1,
-    width: '100%',
-    alignItems: 'center',
-    justifyContent: 'center',
-  },
-});
-```
-
-## Usage with Expo Router and React Navigation
-```tsx
-import { ThemeProvider } from "@react-navigation/native";
-import { UIProvider, useThemePreferences } from "@siteed/design-system";
-import { getLogger } from "@siteed/react-native-logger";
-import { Drawer } from "expo-router/drawer";
-import { useEffect } from "react";
-
-export const unstable_settings = {
-  initialRouteName: "(tabs)", // always go back to the tabs screen
-};
-
-const logger = getLogger("WithMainProviders");
-const WithMainProviders = () => {
-  const { theme } = useThemePreferences();
-
-  useEffect(() => {
-    logger.info("App started", theme);
-  }, [logger]);
-
-  return (
-    <ThemeProvider value={theme}>
-      <Drawer screenOptions={{ headerShown: true }}>
-        <Drawer.Screen name="(tabs)" />
-      </Drawer>
-    </ThemeProvider>
-  );
-};
-
-export default function HomeLayout() {
-  return (
-    <UIProvider
-      toastProviderProps={{
-        overrides: {
-          snackbarStyle: { marginBottom: 100 },
-        },
-      }}
-    >
-      <WithMainProviders />
-    </UIProvider>
-  );
-}
-```
