--- a/packages/design-system/src/hooks/useConfirm/useConfirm.mdx
+++ b/packages/design-system/src/hooks/useConfirm/useConfirm.mdx
@@ -1,80 +1,147 @@
-import { Meta, Story, Canvas } from '@storybook/addon-docs';
+import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Hooks/useConfirm" />
 
 # useConfirm
 
-The `useConfirm` hook provides methods to manage confirmation dialogs. It is designed to be used within a `ConfirmProvider`.
+The `useConfirm` hook provides a simple way to trigger confirmation dialogs throughout your application. It is designed to be used within a `ConfirmProvider`.
 
 ## API
 
 ### `useConfirm`
 
-This hook returns a function that can be used to trigger confirmation dialogs.
+Returns a function that can be used to trigger confirmation dialogs.
 
-- **Type**: `() => (options: ConfirmOptions) => Promise<boolean>`
-- **Parameters**:
-  - `options`: Properties for the confirmation dialog.
-    - **Type**: `ConfirmOptions`
-    - **Properties**:
-      - `title`: The title of the confirmation dialog.
-        - **Type**: `string`
-        - **Required**: Yes
-      - `notice`: The notice message displayed in the dialog.
-        - **Type**: `string`
-        - **Optional**: Yes
-      - `confirmLabel`: The label for the confirm button.
-        - **Type**: `string`
-        - **Optional**: Yes
-        - **Default**: `'Yes'`
-      - `cancelLabel`: The label for the cancel button.
-        - **Type**: `string`
-        - **Optional**: Yes
-        - **Default**: `'No'`
-      - `onConfirm`: Callback function to execute when confirmed.
-        - **Type**: `() => void`
-        - **Optional**: Yes
-      - `onCancel`: Callback function to execute when canceled.
-        - **Type**: `() => void`
-        - **Optional**: Yes
+**Type**: `() => (options: ConfirmOptions) => Promise<boolean>`
 
-## Example
+### ConfirmOptions
 
-Use the `useConfirm` hook to manage confirmation dialogs within your component.
+| Prop | Type | Description | Default |
+|------|------|-------------|---------|
+| `title` | `string` | Dialog title | Required |
+| `notice` | `string` | Explanatory text | - |
+| `confirmButton` | `Partial<DialogButton>` | Confirm button configuration | `{ label: 'Yes', mode: 'contained' }` |
+| `cancelButton` | `Partial<DialogButton>` | Cancel button configuration | `{ label: 'No', mode: 'text' }` |
+| `onConfirm` | `() => void` | Callback when confirmed | - |
+| `onCancel` | `() => void` | Callback when cancelled | - |
 
+### DialogButton Configuration
+
+| Prop | Type | Description |
+|------|------|-------------|
+| `label` | `string` | Button text |
+| `mode` | `'text' \| 'outlined' \| 'contained'` | Button variant |
+| `loading` | `boolean` | Shows loading state |
+| `disabled` | `boolean` | Disables the button |
+| `style` | `ViewStyle` | Custom button styles |
+| `labelStyle` | `TextStyle` | Custom label styles |
+
+## Examples
+
+### Basic Usage
 ```tsx
-import React from 'react';
-import { useConfirm } from '@siteed/design-system/hooks/useConfirm';
-import { Button, View, Text } from 'react-native';
+import { useConfirm } from '@siteed/design-system';
 
-const App = () => {
+function DeleteButton() {
   const confirm = useConfirm();
 
   const handleDelete = async () => {
-    const result = await confirm({
+    const confirmed = await confirm({
       title: 'Delete Item',
       notice: 'Are you sure you want to delete this item?',
-      confirmLabel: 'Yes',
-      cancelLabel: 'No',
+      confirmButton: {
+        label: 'Delete',
+        mode: 'contained',
+        style: { backgroundColor: theme.colors.error }
+      }
     });
 
-    if (result) {
-      console.log('Item deleted');
-    } else {
-      console.log('Delete canceled');
+    if (confirmed) {
+      // Proceed with deletion
     }
   };
 
-  return (
-    <View>
-      <Text>Hello World</Text>
-      <Button title="Delete Item" onPress={handleDelete} />
-    </View>
-  );
-};
-
-export default App;
+  return <Button onPress={handleDelete}>Delete</Button>;
+}
 ```
 
-For more details on the ConfirmProvider, refer to the [ConfirmProvider](?path=/docs/providers--docs#confirmprovider) documentation.
+### With Loading State
+```tsx
+function SaveButton() {
+  const confirm = useConfirm();
+  const [isLoading, setIsLoading] = useState(false);
+
+  const handleSave = async () => {
+    const confirmed = await confirm({
+      title: 'Save Changes',
+      notice: 'Do you want to save your changes?',
+      confirmButton: {
+        label: 'Save',
+        loading: isLoading,
+        disabled: isLoading
+      },
+      cancelButton: {
+        label: 'Cancel',
+        disabled: isLoading
+      }
+    });
+
+    if (confirmed) {
+      setIsLoading(true);
+      await saveData();
+      setIsLoading(false);
+    }
+  };
+
+  return <Button onPress={handleSave}>Save</Button>;
+}
+```
+
+### Custom Styling
+```tsx
+function CustomButton() {
+  const confirm = useConfirm();
+  const theme = useTheme();
+
+  const handleAction = async () => {
+    const confirmed = await confirm({
+      title: 'Custom Action',
+      notice: 'Proceed with custom action?',
+      confirmButton: {
+        label: 'Continue',
+        mode: 'contained',
+        style: { backgroundColor: theme.colors.primary },
+        labelStyle: { fontWeight: 'bold' }
+      }
+    });
+  };
+
+  return <Button onPress={handleAction}>Custom Action</Button>;
+}
+```
+
+## Best Practices
+
+1. Use clear and actionable titles
+2. Provide helpful context in the notice
+3. Use appropriate button modes for action hierarchy
+4. Handle loading states for async operations
+5. Style destructive actions appropriately
+6. Ensure dialog messages are concise and meaningful
+
+## Provider Setup
+
+Ensure your app is wrapped with the `ConfirmProvider`:
+
+```tsx
+import { ConfirmProvider } from '@siteed/design-system';
+
+function App() {
+  return (
+    <ConfirmProvider>
+      <YourApp />
+    </ConfirmProvider>
+  );
+}
+```
 
