--- a/packages/design-system/src/hooks/useToast/useToast.mdx
+++ b/packages/design-system/src/hooks/useToast/useToast.mdx
@@ -10,9 +10,9 @@ The `useToast` hook provides methods to manage toast notifications. It is design
 
 ### `useToast`
 
-This hook returns an object with two methods: `show` and `hide`.
+This hook returns an object with three methods: `show`, `loader`, and `hide`.
 
-- **Type**: `() => { show: (options: ToastOptions) => void; hide: () => void; }`
+- **Type**: `() => { show: (options: ToastOptions) => void; loader: (message: string, options?: ToastOptions) => void; hide: () => void; }`
 - **Methods**:
   - `show`
     - **Type**: `(options: ToastOptions) => void`
@@ -24,55 +24,160 @@ This hook returns an object with two methods: `show` and `hide`.
             - **Type**: `string`
             - **Required**: Yes
           - `type`: The type of toast (e.g., 'info', 'success', 'error').
-            - **Type**: `string`
+            - **Type**: `'info' | 'success' | 'warning' | 'error'`
             - **Optional**: Yes
             - **Default**: `'info'`
-          - `position`: The position of the toast on the screen (e.g., 'top', 'bottom').
-            - **Type**: `string`
+          - `position`: The position of the toast on the screen.
+            - **Type**: `'top' | 'bottom' | 'middle'`
             - **Optional**: Yes
             - **Default**: `'bottom'`
           - `duration`: Duration for which the toast will be visible.
             - **Type**: `number`
             - **Optional**: Yes
-            - **Default**: `3000`
+            - **Default**: `2000`
           - `iconVisible`: Whether an icon should be visible in the toast.
             - **Type**: `boolean`
             - **Optional**: Yes
+            - **Default**: `true`
+          - `showCloseIcon`: Whether to show a close button.
+            - **Type**: `boolean`
+            - **Optional**: Yes
             - **Default**: `false`
+          - `swipeConfig`: Configuration for swipe-to-dismiss behavior.
+            - **Type**: `SwipeConfig`
+            - **Optional**: Yes
+            - **Properties**:
+              - `isEnabled`: Enable/disable swipe functionality.
+                - **Type**: `boolean`
+                - **Default**: `true`
+              - `direction`: Direction of swipe gesture.
+                - **Type**: `'left-to-right' | 'right-to-left' | 'both'`
+                - **Default**: `'right-to-left'`
+              - `initialThreshold`: Minimum swipe distance to start gesture.
+                - **Type**: `number`
+                - **Default**: `15`
+              - `dismissThreshold`: Distance required to trigger dismiss.
+                - **Type**: `number`
+                - **Default**: `40`
+              - `velocityThreshold`: Velocity required to trigger dismiss.
+                - **Type**: `number`
+                - **Default**: `500`
+  - `loader`
+    - **Type**: `(message: string, options?: ToastOptions) => void`
+    - **Description**: Shows a loading toast with a spinner.
   - `hide`
     - **Type**: `() => void`
     - **Description**: Hides the currently visible toast.
 
-## Example
+## Examples
 
-Use the `useToast` hook to show and hide toast notifications within your component.
+### Basic Usage
 
 ```tsx
 import React from 'react';
 import { useToast } from '@siteed/design-system/hooks/useToast';
-import { Button, View, Text } from 'react-native';
+import { Button, View } from 'react-native';
 
 const App = () => {
   const toast = useToast();
 
   const handleShowToast = () => {
-    toast.show({ message: 'This is a toast message!', type: 'success' });
+    toast.show({ 
+      message: 'This is a toast message!', 
+      type: 'success' 
+    });
   };
 
-  const handleHideToast = () => {
+  return (
+    <View>
+      <Button title="Show Toast" onPress={handleShowToast} />
+    </View>
+  );
+};
+```
+
+### Swipeable Toast
+
+```tsx
+import React from 'react';
+import { useToast } from '@siteed/design-system/hooks/useToast';
+import { Button, View } from 'react-native';
+
+const App = () => {
+  const toast = useToast();
+
+  const handleSwipeableToast = () => {
+    toast.show({
+      message: '👈 Swipe to dismiss',
+      type: 'info',
+      swipeConfig: {
+        isEnabled: true,
+        direction: 'right-to-left'
+      }
+    });
+  };
+
+  return (
+    <View>
+      <Button title="Show Swipeable Toast" onPress={handleSwipeableToast} />
+    </View>
+  );
+};
+```
+
+### Interactive Toast
+
+```tsx
+import React from 'react';
+import { useToast } from '@siteed/design-system/hooks/useToast';
+import { Button, View } from 'react-native';
+
+const App = () => {
+  const toast = useToast();
+
+  const handleInteractiveToast = () => {
+    toast.show({
+      message: 'Swipe or click X to dismiss',
+      type: 'success',
+      showCloseIcon: true,
+      swipeConfig: {
+        isEnabled: true,
+        direction: 'both'
+      }
+    });
+  };
+
+  return (
+    <View>
+      <Button title="Show Interactive Toast" onPress={handleInteractiveToast} />
+    </View>
+  );
+};
+```
+
+### Loading Toast
+
+```tsx
+import React from 'react';
+import { useToast } from '@siteed/design-system/hooks/useToast';
+import { Button, View } from 'react-native';
+
+const App = () => {
+  const toast = useToast();
+
+  const handleLoading = async () => {
+    toast.loader('Loading...', { position: 'middle' });
+    // Perform async operation
+    await someAsyncOperation();
     toast.hide();
   };
 
   return (
     <View>
-      <Text>Hello World</Text>
-      <Button title="Show Toast" onPress={handleShowToast} />
-      <Button title="Hide Toast" onPress={handleHideToast} />
+      <Button title="Show Loading Toast" onPress={handleLoading} />
     </View>
   );
 };
-
-export default App;
 ```
 
-For more details on the `ToastProvider`, refer to the [ToastProvider documentation](?path=/docs/providers--docs#toastprovider) documentation.
+For more details on the `ToastProvider`, refer to the [ToastProvider documentation](?path=/docs/providers--docs#toastprovider).
