--- a/packages/design-system/src/hooks/useToast/useToast.mdx
+++ b/packages/design-system/src/hooks/useToast/useToast.mdx
@@ -62,6 +62,19 @@ This hook returns an object with three methods: `show`, `loader`, and `hide`.
               - `velocityThreshold`: Velocity required to trigger dismiss.
                 - **Type**: `number`
                 - **Default**: `500`
+          - `stackBehavior`: Configuration for toast stacking behavior.
+            - **Type**: `object`
+            - **Optional**: Yes
+            - **Properties**:
+              - `isStackable`: Enable/disable stacking for this toast.
+                - **Type**: `boolean`
+                - **Default**: `true`
+              - `stackSpacing`: Space between stacked toasts in pixels.
+                - **Type**: `number`
+                - **Default**: `60`
+              - `replaceAll`: Replace all existing toasts with this one.
+                - **Type**: `boolean`
+                - **Default**: `false`
   - `loader`
     - **Type**: `(message: string, options?: ToastOptions) => void`
     - **Description**: Shows a loading toast with a spinner.
@@ -175,6 +188,45 @@ const App = () => {
   return (
     <View>
       <Button title="Show Loading Toast" onPress={handleLoading} />
+    </View>
+  );
+};
+```
+
+### Stacked Toasts
+
+```tsx
+import React from 'react';
+import { useToast } from '@siteed/design-system/hooks/useToast';
+import { Button, View } from 'react-native';
+
+const App = () => {
+  const toast = useToast();
+
+  const handleStackedToasts = () => {
+    // Show multiple stacked toasts
+    toast.show({
+      message: 'First Toast',
+      type: 'info',
+      stackBehavior: {
+        isStackable: true,
+        stackSpacing: 60
+      }
+    });
+    
+    toast.show({
+      message: 'Second Toast',
+      type: 'success',
+      stackBehavior: {
+        isStackable: true,
+        stackSpacing: 60
+      }
+    });
+  };
+
+  return (
+    <View>
+      <Button title="Show Stacked Toasts" onPress={handleStackedToasts} />
     </View>
   );
 };
